// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Thumbnail> Snapshots and structure should render story 'Clickable' 1`] = `
<button
  className="lumx-thumbnail lumx-thumbnail--aspect-ratio-original lumx-thumbnail--size-xxl lumx-thumbnail--theme-light lumx-thumbnail--is-clickable lumx-thumbnail--is-loading"
  onClick={[Function]}
>
  <div
    className="lumx-thumbnail__background"
  >
    <img
      alt="Click me"
      className="lumx-thumbnail__image lumx-thumbnail__image--is-loading"
      loading="lazy"
      src="/demo-assets/landscape1.jpg"
      style={
        Object {
          "objectPosition": undefined,
        }
      }
    />
  </div>
</button>
`;

exports[`<Thumbnail> Snapshots and structure should render story 'ClickableCustomLink' 1`] = `
<CustomLinkComponent
  className="custom-class-name lumx-thumbnail lumx-thumbnail--aspect-ratio-original lumx-thumbnail--size-xxl lumx-thumbnail--theme-light lumx-thumbnail--is-clickable lumx-thumbnail--is-loading"
  href="https://google.fr"
>
  <div
    className="lumx-thumbnail__background"
  >
    <img
      alt="Click me"
      className="lumx-thumbnail__image lumx-thumbnail__image--is-loading"
      loading="lazy"
      src="/demo-assets/landscape1.jpg"
      style={
        Object {
          "objectPosition": undefined,
        }
      }
    />
  </div>
</CustomLinkComponent>
`;

exports[`<Thumbnail> Snapshots and structure should render story 'ClickableLink' 1`] = `
<a
  className="lumx-thumbnail lumx-thumbnail--aspect-ratio-original lumx-thumbnail--size-xxl lumx-thumbnail--theme-light lumx-thumbnail--is-clickable lumx-thumbnail--is-loading"
  href="https://google.fr"
>
  <div
    className="lumx-thumbnail__background"
  >
    <img
      alt="Click me"
      className="lumx-thumbnail__image lumx-thumbnail__image--is-loading"
      loading="lazy"
      src="/demo-assets/landscape1.jpg"
      style={
        Object {
          "objectPosition": undefined,
        }
      }
    />
  </div>
</a>
`;

exports[`<Thumbnail> Snapshots and structure should render story 'Default' 1`] = `
<div
  className="lumx-thumbnail lumx-thumbnail--aspect-ratio-original lumx-thumbnail--theme-light lumx-thumbnail--variant-squared lumx-thumbnail--is-loading"
>
  <div
    className="lumx-thumbnail__background"
  >
    <img
      alt="Image alt text"
      className="lumx-thumbnail__image lumx-thumbnail__image--is-loading"
      loading="lazy"
      src="/demo-assets/landscape1.jpg"
      style={
        Object {
          "objectPosition": undefined,
        }
      }
    />
  </div>
</div>
`;

exports[`<Thumbnail> Snapshots and structure should render story 'WithBadge' 1`] = `
<div
  className="lumx-thumbnail lumx-thumbnail--aspect-ratio-square lumx-thumbnail--size-l lumx-thumbnail--theme-light lumx-thumbnail--variant-rounded lumx-thumbnail--is-loading lumx-thumbnail--has-badge"
>
  <div
    className="lumx-thumbnail__background"
  >
    <img
      alt="Image alt text"
      className="lumx-thumbnail__image lumx-thumbnail__image--is-loading"
      loading="lazy"
      src="/demo-assets/landscape1.jpg"
      style={
        Object {
          "objectPosition": undefined,
        }
      }
    />
  </div>
  <Badge
    className="lumx-thumbnail__badge"
    color="primary"
  >
    <Icon
      icon="M4 2A2 2 0 0 0 2 4V12H4V8H6V12H8V4A2 2 0 0 0 6 2H4M4 4H6V6H4M22 15.5V14A2 2 0 0 0 20 12H16V22H20A2 2 0 0 0 22 20V18.5A1.54 1.54 0 0 0 20.5 17A1.54 1.54 0 0 0 22 15.5M20 20H18V18H20V20M20 16H18V14H20M5.79 21.61L4.21 20.39L18.21 2.39L19.79 3.61Z"
    />
  </Badge>
</div>
`;
